Fix new Long versus Long.valueOf