@@ -201,7 +201,7 @@ public class EntityOperatorTest {
         EntityOperator eo = EntityOperator.fromCrd(resource);
 
         Deployment dep = eo.generateDeployment(true, Collections.EMPTY_MAP);
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -217,7 +217,7 @@ public class EntityOperatorTest {
         EntityOperator eo = EntityOperator.fromCrd(resource);
 
         Deployment dep = eo.generateDeployment(true, Collections.EMPTY_MAP);
-        assertEquals(new Long(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -281,9 +281,9 @@ public class EntityOperatorTest {
 
         Deployment dep = eo.generateDeployment(true, Collections.EMPTY_MAP);
         assertNotNull(dep.getSpec().getTemplate().getSpec().getSecurityContext());
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
-        assertEquals(new Long(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
-        assertEquals(new Long(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
+        assertEquals(Long.valueOf(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
+        assertEquals(Long.valueOf(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
     }
 
     @Test
