@@ -631,7 +631,7 @@ public class KafkaConnectClusterTest {
         KafkaConnectCluster kc = KafkaConnectCluster.fromCrd(resource, VERSIONS);
 
         Deployment dep = kc.generateDeployment(Collections.EMPTY_MAP, true);
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -640,7 +640,7 @@ public class KafkaConnectClusterTest {
         KafkaConnectCluster kc = KafkaConnectCluster.fromCrd(resource, VERSIONS);
 
         Deployment dep = kc.generateDeployment(Collections.EMPTY_MAP, true);
-        assertEquals(new Long(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -689,9 +689,9 @@ public class KafkaConnectClusterTest {
 
         Deployment dep = kc.generateDeployment(Collections.EMPTY_MAP, true);
         assertNotNull(dep.getSpec().getTemplate().getSpec().getSecurityContext());
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
-        assertEquals(new Long(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
-        assertEquals(new Long(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
+        assertEquals(Long.valueOf(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
+        assertEquals(Long.valueOf(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
     }
 
     @Test
