@@ -448,7 +448,7 @@ public class KafkaMirrorMakerClusterTest {
         KafkaMirrorMakerCluster mmc = KafkaMirrorMakerCluster.fromCrd(resource, VERSIONS);
 
         Deployment dep = mmc.generateDeployment(Collections.EMPTY_MAP, true);
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -457,7 +457,7 @@ public class KafkaMirrorMakerClusterTest {
         KafkaMirrorMakerCluster mmc = KafkaMirrorMakerCluster.fromCrd(resource, VERSIONS);
 
         Deployment dep = mmc.generateDeployment(Collections.EMPTY_MAP, true);
-        assertEquals(new Long(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
+        assertEquals(Long.valueOf(30), dep.getSpec().getTemplate().getSpec().getTerminationGracePeriodSeconds());
     }
 
     @Test
@@ -506,9 +506,9 @@ public class KafkaMirrorMakerClusterTest {
 
         Deployment dep = mmc.generateDeployment(Collections.EMPTY_MAP, true);
         assertNotNull(dep.getSpec().getTemplate().getSpec().getSecurityContext());
-        assertEquals(new Long(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
-        assertEquals(new Long(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
-        assertEquals(new Long(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
+        assertEquals(Long.valueOf(123), dep.getSpec().getTemplate().getSpec().getSecurityContext().getFsGroup());
+        assertEquals(Long.valueOf(456), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsGroup());
+        assertEquals(Long.valueOf(789), dep.getSpec().getTemplate().getSpec().getSecurityContext().getRunAsUser());
     }
 
     @Test
